k8s/app/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redemption
  labels:
    # Enforce the restricted Pod Security Standard on this namespace.
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
